k8s/rollouts.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-rollout
  namespace: nginx-rollout
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: nginx-rollout
  template:
    metadata:
      labels:
        app: nginx-rollout
    spec:
      nodeSelector:
        kubernetes.io/hostname: rasppi516
      containers:
        - name: nginx
          image: nginx:1.29.5
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-data
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

      volumes:
        - name: nginx-data
          hostPath:
            path: /data/nginx
            type: DirectoryOrCreate

  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: { duration: 30s }
        - setWeight: 50
        - pause: { duration: 1m }
        - setWeight: 100
