k8s/nginx-rollout.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-rollout
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-stable
  namespace: nginx-rollout
spec:
  externalIPs: 
    - 10.0.0.160
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
  namespace: nginx-rollout
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
  namespace: nginx-rollout
spec:
  replicas: 3

  strategy:
    canary:
      stableService: nginx-stable
      canaryService: nginx-canary
      trafficRouting:
        # Si tienes Istio, NGINX Ingress o ALB puedes integrarlo aquí
        # vacío para modo básico
      trafficRouting:   # 👈 VA AQUÍ
        istio:
          virtualService:
            name: nginx-vs
            routes:
              - primary
          destinationRule:
            name: nginx-dr
            canarySubsetName: canary
            stableSubsetName: stable
      
      steps:
        - setWeight: 20
        - pause: { duration: 20s }
        - setWeight: 50
        - pause: { duration: 20s }
        - setWeight: 100

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.5
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
